style.css
* {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  background: #080808;
  color: #fff;
}

.hi {
  font-size: 52px;
  color: #0561c4;
}

.noscroll {
  overflow: hidden;
}

#header {
  width: 100%;
  height: 100vh;
  background: url(images/amatya_nahar_desktop.png);
  background-size: 93%;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
}

.container {
  padding: 56px 10%;
  min-width: fit-content;
  min-height: fit-content;
}

#sidemenu {
  margin-right: 100px;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #0561c4;
  z-index: 1000;
}

#logo {
  margin: 10px 0px 10px 60px;
  cursor: pointer;
}

.logo {
  height: 50px;
}

.logo:hover {
  content: url("images/logo2.png");
}

.highlight {
  color: #ff004f;
  font-family: "Courier New", Courier, monospace;
  font-size: 55px;
  font-weight: 800;
}

nav ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 12px 10px 12px;
}

nav ul li a {
  text-decoration: none;
  color: #fff;
  font-size: 22px;
  position: relative;
}

nav ul li a::after {
  content: "";
  width: 0%;
  height: 5px;
  background: #ff004f;
  position: absolute;
  left: 0;
  bottom: -6px;
}

nav ul li a:hover::after {
  width: 100%;
}

nav ul li a:hover {
  color: #2f2f2f;
  font-weight: bold;
}

.header-text {
  margin-top: 12%;
  margin-right: 40%;
  font-size: 30px;
}

.header-text h1 {
  font-size: 60px;
  margin-top: 20px;
}

.header-text h1 span {
  color: #ff004f;
}

.designation {
  text-decoration: underline;
  font-weight: 500;
  font-size: 34px;
}

/* -------------------------about---------------------------------- */

#about {
  padding: 24px 0;
  color: #ababab;
}

#about img {
  margin-top: 24px;
  box-shadow: 0px 5px 20px #0561c4, 0px -8px 25px 0px #ff004f;
}

.row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about-col-1 {
  flex-basis: 35%;
}

.about-col-1 img {
  width: 100%;
  border-radius: 15px;
}

.about-col-2 {
  flex-basis: 60%;
}

.sub-title {
  font-size: 60px;
  font-weight: 600;
  color: #fff;
  margin-top: 10px;
}

#tab-titles {
  display: flex;
  margin: 20px 0 20px;
}

.tab-links {
  margin-right: 50px;
  font-size: 18px;
  font-weight: bold;
  cursor: pointer;
  position: relative;
  color: #fff;
  z-index: 1;
}

.tab-links::after {
  content: "";
  width: 0;
  height: 5px;
  position: absolute;
  left: 0;
  bottom: -8px;
  transition: 1s;
}

.tab-links.active-link::after {
  background: #0561c4;
  border-width: 2px;
  border-style: solid;
  border-color: #2f2f2f #0561c4 #2f2f2f #2f2f2f;
  width: 80%;
}

.tab-contents ul li {
  list-style: none;
  margin: 4px 0;
}

.tab-contents ul li span {
  color: #ff004f;
  font-size: 16px;
}

.tab-contents {
  display: none;
}

.tab-contents.active-tab {
  display: block;
}

/* -----------------------------services----------------------------------- */

#services {
  padding: 40px 0;
}

.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 40px;
  margin-top: 50px;
  min-height: 350px;
}

.services-list div {
  background: #262626;
  padding: 40px;
  font-size: 13px;
  font-weight: 300;
  border-radius: 20px;
  transition: background 0.5s, transform 0.5s;
}

.services-list div i {
  font-size: 100px;
  margin: 30px;
}

.services-list div h2 {
  font-size: 30px;
  font-weight: 500;
  margin-bottom: 15px;
}

.services-list div a {
  text-decoration: none;
  color: #fff;
  font-size: 12px;
  margin-top: 20px;
  display: inline-block;
}

.services-list div:hover {
  background: #ff004f;
  transform: translateY(-10px);
}

/* ---------------portfolio------------------------- */

/* #portfolio {
  padding: 50px 0;
}

.work-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 40px;
  margin-top: 50px;
}

.work {
  border-radius: 10px;
  position: relative;
  overflow: hidden;
}

.work img {
  width: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 0.5s;
}

.layer {
  width: 100%;
  height: 0%;
  background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
  border-radius: 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 0 40px;
  text-align: center;
  font-size: 14px;
  transition: height 0.5s;
}

.layer h3 {
  font-weight: 500;
  margin-bottom: 20px;
}

.layer a {
  margin-top: 20px;
  color: #ff004f;
  text-decoration: none;
  font-size: 18px;
  line-height: 60px;
  background-color: #fff;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
}

.work:hover img {
  transform: scale(1.1);
}

.work:hover .layer {
  height: 100%;
}

.btn {
  display: block;
  margin: 50px auto;
  width: fit-content;
  border: 1px solid #ff004f;
  padding: 14px 50px;
  border-radius: 60px;
  text-decoration: none;
  color: #fff;
}

.btn:hover {
  background: #ff004f;
  transition: transform 0.5s;
} */

/* ---------------------------contact---------------------------------------- */
#contact {
  padding-top: 10px;
}

.btn {
  display: block;
  margin: 50px auto;
  max-width: fit-content;
  border: 2px solid #080808;
  padding: 14px 50px;
  border-radius: 60px;
  text-decoration: none;
  color: #fff;
}

.btn:hover {
  border: 2px solid #2f2f2f;
  background: #0561c4;
  transition: transform 1s;
}

.contact-left {
  flex-basis: 35%;
}

.contact-right {
  flex-basis: 60%;
}

.contact-left p {
  margin-top: 30px;
}

.contact-left p i {
  color: #ff004f;
  margin-right: 15px;
  font-size: 20px;
  margin-left: 30px;
}

a[href^="mailto:"] {
  color: #fff;
  text-decoration: underline;
}

.social-icons {
  margin-top: 30px;
  margin-left: 30px;
}

.social-icons a {
  text-decoration: none;
  font-size: 30px;
  margin-right: 15px;
  color: #ababab;
  display: inline-block;
  transition: transform 0.5s;
}

.social-icons a:hover {
  color: #ff004f;
  transform: translateY(-5px);
}

.resume {
  display: block;
  margin-top: 20px;
  text-align: center;
}

.resume-btn {
  display: inline-block;
  background: #ff004f;
  border: 2px solid #080808;
  padding: 14px 25px;
  font-size: 18px;
  cursor: pointer;
  margin: 14px auto;
  border-radius: 70px;
  text-decoration: none;
  color: #fff;
  white-space: nowrap;
}

.resume-btn:hover {
  border: 2px solid #2f2f2f;
  background: #0561c4;
  transition: transform 1s;
}

.btn2 {
  display: inline-block;
  background: #ff004f;
}

.pdf {
  margin-right: 60px;
}

.docx {
  margin-right: 55px;
}

.contact-right form {
  width: 100%;
}

form input,
form textarea {
  width: 100%;
  border: 0;
  outline: none;
  background: #262626;
  padding: 15px;
  margin: 15px 0;
  color: #fff;
  font-size: 18px;
  border-radius: 6px;
}

form .btn2 {
  padding: 14px 60px;
  font-size: 18px;
  margin-top: 10px;
  cursor: pointer;
}

.copyright {
  width: 100%;
  text-align: center;
  padding: 10px 0;
  background: #262626;
  font-weight: 300;
  margin-top: 10px;
}

.copyright i {
  color: #ff004f;
}

#msg {
  color: #61b752;
  margin-top: -45px;
  display: block;
}

#overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 9999;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#spinner {
  width: 60px;
  height: 60px;
  border: 10px solid #0561c4;
  border-top: 10px solid #ff004f;
  border-radius: 50%;
  animation: spin 1s linear infinite;
  margin-bottom: 16px;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

#overlay-text {
  color: #fff;
  font-size: 24px;
  font-weight: normal;
  transition: all 0.2s ease-in-out;
}

#dots {
  display: inline-block;
  width: 1em;
  text-align: left;
  animation: dots 1s steps(3, end) infinite;
}

@keyframes dots {
  0% {
    content: "";
  }

  33% {
    content: ".";
  }

  66% {
    content: "..";
  }

  100% {
    content: "...";
  }
}

/* For Safari and cross-browser support */
#dots::after {
  content: "";
  animation: dotsText 1s steps(4, end) infinite;
}

@keyframes dotsText {
  0% {
    content: "";
  }

  25% {
    content: ".";
  }

  50% {
    content: "..";
  }

  75% {
    content: "...";
  }

  100% {
    content: "";
  }
}

/* ---------------------------------CSS for small screens------------------------------------- */
nav .mobile-view {
  display: none;
}

@media only screen and (max-width: 650px) {
  html {
    min-width: fit-content;
  }

  .container {
    padding: 6px 5%;
    min-width: fit-content;
    min-height: fit-content;
  }

  .hi {
    font-size: 26px;
    color: #0561c4;
  }

  .highlight {
    font-size: 28px;
  }

  #header {
    background-attachment: scroll;
    background-size: contain;
    background-repeat: no-repeat;
    height: fit-content;
    transition: background-image 0s ease-in-out;
  }

  .header-text {
    margin-top: 100%;
    font-size: 24px;
    min-width: fit-content;
  }

  .designation {
    text-decoration: underline;
    font-weight: 300;
    font-size: 22px;
  }

  .skills {
    font-size: 18px;
  }

  nav {
    display: flex;
    flex-wrap: wrap;
    position: fixed;
    top: 0;
    width: 100%;
    min-height: fit-content;
    background-color: #0561c4;
  }

  nav ul li a::after {
    content: "";
    width: 0%;
    height: 5px;
    background: #0561c4;
    position: absolute;
    left: 0;
    bottom: -6px;
  }

  nav ul li a:hover::after {
    width: 100%;
  }

  nav ul li a:hover {
    color: #2f2f2f;
    font-weight: bold;
  }

  .nav-mobile {
    min-height: fit-content;
  }

  nav .mobile-view {
    display: block;
    font-size: 25px;
    display: flex;
  }

  nav ul {
    background: #ff004f;
    position: fixed;
    top: 0;
    right: -250px;
    width: 250px;
    height: 100%;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.5s;
  }

  nav ul li {
    display: block;
    margin: 25px;
  }

  #open {
    position: absolute;
    top: 20px;
    left: 88%;
    cursor: pointer;
    color: #fff;
  }

  #open:hover {
    color: #2f2f2f;
  }

  #close {
    position: absolute;
    top: 20px;
    left: 190px;
    cursor: pointer;
    background-color: #fff;
    color: #2f2f2f;
    border-radius: 50%;
    padding: 10px;
    font-size: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
  }

  #close:hover {
    background-color: #2f2f2f;
    color: #fff;
  }

  #logo {
    margin: 10px 300px 10px 0px;
    cursor: pointer;
  }

  .sub-title {
    font-size: 10px;
  }

  .about-col-1,
  .about-col-2 {
    flex-basis: 80%;
  }

  .about-col-1 {
    margin-bottom: 10px;
  }

  .about-col-2 {
    font-size: 14px;
  }

  .tab-links {
    font-size: 16px;
    margin-right: 20px;
    font-weight: bold;
  }

  .contact-left,
  .contact-right {
    flex-basis: 100%;
  }

  .contact-right form {
    text-align: center;
  }

  .copyright {
    font-size: 20px;
  }

  .sub-title {
    font-size: 24px;
  }

  #sidemenu {
    margin-right: 0px;
  }

  #header {
    padding-top: 0px;
  }

  #contact,
  #services {
    padding-top: 70px;
  }

  #about img {
    margin-top: 150px;
  }
}

/* ---------------------CSS for Typing effect----------------------- */

.typing-effect {
  width: 0;
  margin-bottom: 20px;
  overflow: hidden;
  white-space: nowrap;
  animation: typing 2s steps(20, end) forwards,
    blink-caret 0.75s step-end infinite;
}

@keyframes typing {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

@keyframes blink-caret {

  from,
  to {
    border-color: transparent;
  }

  50% {
    border-color: black;
  }
}

